--- a/cross-domain/example.html
+++ b/cross-domain/example.html
@@ -3,15 +3,19 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Respond JS Test Page</title>
-	<link href="https://rawgithub.com/scottjehl/Respond/master/test/test.css" rel="stylesheet"/>
-	<link href="https://rawgithub.com/scottjehl/Respond/master/test/test2.css" media="screen and (min-width: 600px)" rel="stylesheet"/>
-	<script src="../dest/respond.src.js"></script>
-	
+    <!-- ie9-采用XDomainRequest进行跨域请求,XDomainRequest只能用http请求-->
+	<link href="http://rawgit.com/scottjehl/Respond/master/test/test.css" rel="stylesheet"/>
+	<link href="http://rawgit.com/scottjehl/Respond/master/test/test2.css" media="screen and (min-width: 600px)" rel="stylesheet"/>
+    <!--[if lt IE 9]>
+    <script src="../dest/respond.src.js"></script>
+    <![endif]-->
+
 	<!-- Respond.js proxy on external server -->
-	<link href="https://rawgithub.com/scottjehl/Respond/master/cross-domain/respond-proxy.html" id="respond-proxy" rel="respond-proxy" />
+    <!-- ie9-采用XDomainRequest进行跨域请求 -->
+	<!-- <link href="https://rawgithub.com/scottjehl/Respond/master/cross-domain/respond-proxy.html" id="respond-proxy" rel="respond-proxy" />
 	<link href="respond.proxy.gif" id="respond-redirect" rel="respond-redirect" />
-	<script src="respond.proxy.js"></script>
-</head> 
+	<script src="respond.proxy.js"></script> -->
+</head>
 <body>
 	<p>This is a visual test file for cross-domain proxy.</p>
 
